--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,26 @@
-- docker build -t udagram-api-feed ./udagram-api-feed
-- docker build -t udagram-api user ./udagram-api-user
-- docker-build -t udagram-frontend ./udagram-frontend
-- docker build -t reverseproxy ./udagram-reverseproxy
+jobs:
+  include:
+    - stage: "build time"
+      script:
+        - docker build -t udagram-api-feed ./udagram-api-feed
+        - docker build -t udagram-api user ./udagram-api-user
+        - docker-build -t udagram-frontend ./udagram-frontend
+        - docker build -t reverseproxy ./udagram-reverseproxy
 
-- docker tag udagram-api-feed lenno93/udagram-api-feed
-- docker tag udagram-api-user lenno93/udagram-api-user
-- docker tag udagram-frontend lenno93/udagram-frontend
-- docker tag reverseproxy lenno93/reverseproxy
+    - stage: "tagging images"
+      script:
+        - docker tag udagram-api-feed lenno93/udagram-api-feed
+        - docker tag udagram-api-user lenno93/udagram-api-user
+        - docker tag udagram-frontend lenno93/udagram-frontend
+        - docker tag reverseproxy lenno93/reverseproxy
 
-- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password---password-stdin
+    - stage: "login to docker hub"
+      script:
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password---password-stdin
 
-- docker push lenno93/udagram-api-feed:v1
-- docker push lenno93/udagram-api-user:v1
-- docker push lenno93/udagram-frontend:v1
-- docker push lenno93/reverseproxy:v1
+    - stage: "Push images to docker hub"
+      script:
+        - docker push lenno93/udagram-api-feed:v1
+        - docker push lenno93/udagram-api-user:v1
+        - docker push lenno93/udagram-frontend:v1
+        - docker push lenno93/reverseproxy:v1
