--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jobs:
     - stage: "build time"
       script:
         - docker build -t udagram-api-feed ./udagram-api-feed
-        - docker build -t udagram-api user ./udagram-api-user
+        - docker build -t udagram-api-user ./udagram-api-user
         - docker-build -t udagram-frontend ./udagram-frontend
         - docker build -t reverseproxy ./udagram-reverseproxy
 
