--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jobs:
       script:
         - docker build -t udagram-api-feed ./udagram-api-feed
         - docker build -t udagram-api-user ./udagram-api-user
-        - docker-build -t udagram-frontend ./udagram-frontend
+        - docker build -t udagram-frontend ./udagram-frontend
         - docker build -t reverseproxy ./udagram-reverseproxy
 
     - stage: "tagging images"
